[SettingsService] use java 9 List.of